# duckdb-rs-jna-demo

./: LICENSE  README.md  pom.xml
src/main/java/com/zongkx/: DoubleNumber.java
src/main/rust/double-number/: Cargo.toml
src/main/rust/double-number/src/: client.rs  d.rs  lib.rs  main.rs  writer.rs
