[package]
name = "double-number"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
duckdb = { version = "1.4.0"   }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
rand = "0.9.2"
anyhow = "1.0.99"
chrono = "0.4.42"
env_logger = "0.11.8"
